# blab-chatbot-example-python

./: .gitignore  README.md  demo.py  pyproject.toml  run.py  settings_example.py  settings_example_TEMPLATE.py
src/blab_chatbot_example/: example_bot.py
src/blab_chatbot_example1/: __main__.py  conversation_example.py  example_settings_format.py
src/blab_chatbot_example_python/: __main__.py  conversation_example.py  example_settings_format.py
